feat: add swagger dock fot endpoint cancel reserve
